💄 Fixed issue 6 (Navigation menu misplaced on Safari (desktop)

--- a/css/_navigation.scss
+++ b/css/_navigation.scss
@@ -44,7 +44,7 @@
     align-items: center;
     justify-content: flex-end;
     align-self: center;
-    height: 100%;
+    height: 10.5rem;
 
     .nav-btn {
       cursor: pointer;
